--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@graphql-tools/load-files": "7.0.0",
     "@graphql-tools/merge": "9.0.0",
     "@graphql-tools/schema": "10.0.0",
+    "cors": "^2.8.5",
     "crypto": "1.0.1",
     "dotenv": "16.3.1",
+    "express": "^4.19.2",
     "graphql": "16.8.1",
     "jsonwebtoken": "9.0.2",
     "moment": "2.29.4",
